// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`real article db: How to Remove Odors From Car Interiors 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        "You don’t have to just live with the odor when there is an unidentified stink in your car. It will take a little effort, but it is well worth it to be able to get in your car without thinking, “ew, why does it smell like that in here?” All you have to do is find the source, clean it up, then give your car a good cleaning – which it probably needs anyway.",
      ],
      "props": Object {
        "key": "md_0",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "key": "md_1",
        "level": 3,
        "text": "Remove the cause of the odor",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Materials Needed",
          ],
          "props": Object {
            "key": "md_2",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_3",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Paper towels",
          ],
          "props": Object {
            "key": "md_4",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Plastic utensil or putty knife",
          ],
          "props": Object {
            "key": "md_5",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_6",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 1: Determine where the odor is coming from",
          ],
          "props": Object {
            "key": "md_7",
          },
          "tag": "strong",
        },
        ". It could be leftover residue from an old milk or juice spill, a half-eaten piece of fruit, or a sippy cup with a little curdled milk left in the bottom.",
      ],
      "props": Object {
        "key": "md_8",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 2: Remove the cause of the odor",
          ],
          "props": Object {
            "key": "md_9",
          },
          "tag": "strong",
        },
        ". Pick it up with paper towels or scrape it off with a plastic utensil or putty knife.",
      ],
      "props": Object {
        "key": "md_10",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "key": "md_11",
        "level": 3,
        "text": "Clean the odor-causing spill",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Materials Needed",
          ],
          "props": Object {
            "key": "md_12",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_13",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Baking soda",
          ],
          "props": Object {
            "key": "md_14",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Bucket",
          ],
          "props": Object {
            "key": "md_15",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Dish soap",
          ],
          "props": Object {
            "key": "md_16",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Distilled vinegar",
          ],
          "props": Object {
            "key": "md_17",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Hot water",
          ],
          "props": Object {
            "key": "md_18",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Towels",
          ],
          "props": Object {
            "key": "md_19",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Vacuum",
          ],
          "props": Object {
            "key": "md_20",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Washcloth or clean sponge",
          ],
          "props": Object {
            "key": "md_21",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_22",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 1: Combine 1 cup of vinegar, 1 teaspoon of dish soap, and 1 gallon of hot water in a bucket",
          ],
          "props": Object {
            "key": "md_23",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_24",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        "**Step 2: Put on some rubber dishwashing gloves and apply the solution to the source of the odor **.",
      ],
      "props": Object {
        "key": "md_25",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 3: Rub the solution into the spot with a scrub brush or sponge",
          ],
          "props": Object {
            "key": "md_26",
          },
          "tag": "strong",
        },
        ". Let it work for about half an hour.",
      ],
      "props": Object {
        "key": "md_27",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 4: Soak up the dirty vinegar solution with a towel",
          ],
          "props": Object {
            "key": "md_28",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_29",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 5: Pour baking soda on the stinky spot",
          ],
          "props": Object {
            "key": "md_30",
          },
          "tag": "strong",
        },
        ". Apply it as heavily as possible. A 1/4-inch thickness or more is best. Leave it there for as long as possible. Overnight is good but several days is better.",
      ],
      "props": Object {
        "key": "md_31",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 6: Vacuum up the baking soda",
          ],
          "props": Object {
            "key": "md_32",
          },
          "tag": "strong",
        },
        ". Use a high-powered wet/dry vacuum if possible. If you only have a regular household vacuum, empty the canister or replace the bag before you use it.",
      ],
      "props": Object {
        "key": "md_33",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 7: Repeat steps 5 and 6, if the odor lingers",
          ],
          "props": Object {
            "key": "md_34",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_35",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        "**Step 8: Put the windows down and leave the car outdoors, if you can, to let it air out **.",
      ],
      "props": Object {
        "key": "md_36",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "key": "md_37",
        "level": 3,
        "text": "Clean the entire interior of your car",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        "Now it’s time to give your car’s interior a ",
        Object {
          "children": Array [
            "thorough cleaning",
          ],
          "props": Object {
            "href": "https://getjerry.com/advice/how-to-do-a-thorough-car-interior-cleaning-by-amber-dowler",
            "key": "md_38",
            "title": null,
          },
          "tag": "a",
        },
        ". At this point, you can also tackle ",
        Object {
          "children": Array [
            "grease and oil stains",
          ],
          "props": Object {
            "href": "https://getjerry.com/advice/how-to-remove-grease-and-oil-from-a-car-interior-by-mary-kurz",
            "key": "md_39",
            "title": null,
          },
          "tag": "a",
        },
        ", ",
        Object {
          "children": Array [
            "windows",
          ],
          "props": Object {
            "href": "https://getjerry.com/advice/how-to-clean-the-inside-of-a-car-windshield-by-cheryl-knight",
            "key": "md_40",
            "title": null,
          },
          "tag": "a",
        },
        ", and, once you’re done, consider installing ",
        Object {
          "children": Array [
            "car seat covers",
          ],
          "props": Object {
            "href": "https://getjerry.com/advice/how-to-buy-install-and-clean-car-seat-covers-by-rochelle-miller-hernandez",
            "key": "md_41",
            "title": null,
          },
          "tag": "a",
        },
        ".",
      ],
      "props": Object {
        "key": "md_42",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Materials Needed",
          ],
          "props": Object {
            "key": "md_43",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_44",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Automotive carpet and upholstery cleaner (Available in auto parts stores and online.)",
          ],
          "props": Object {
            "key": "md_45",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Towels",
          ],
          "props": Object {
            "key": "md_46",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Washcloth or clean sponge",
          ],
          "props": Object {
            "key": "md_47",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Vacuum",
          ],
          "props": Object {
            "key": "md_48",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_49",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 1: Take everything out of the car",
          ],
          "props": Object {
            "key": "md_50",
          },
          "tag": "strong",
        },
        ". Remove the floor mats, too.",
      ],
      "props": Object {
        "key": "md_51",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 2: Vacuum the entire car, top to bottom",
          ],
          "props": Object {
            "key": "md_52",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_53",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 3: Clean the carpet, upholstery, and headliner/roof upholstery with automotive carpet and upholstery cleaner",
          ],
          "props": Object {
            "key": "md_54",
          },
          "tag": "strong",
        },
        ". Follow the manufacturer’s instructions. ",
      ],
      "props": Object {
        "key": "md_55",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        "For best results, get an all-purpose cleaning/odor-eliminating solution like ",
        Object {
          "children": Array [
            "Turtle Wax’s Clean and Fresh Kit",
          ],
          "props": Object {
            "href": "https://www.amazon.com/dp/B072HKH61F?psc=1",
            "key": "md_56",
            "title": null,
          },
          "tag": "a",
        },
        ". It even comes with a special microfiber towel to use.",
      ],
      "props": Object {
        "key": "md_57",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 4: Let the car sit outdoors with the windows open for as long as you can to really air it out",
          ],
          "props": Object {
            "key": "md_58",
          },
          "tag": "strong",
        },
        ". Do not leave the doors open, though. The dome light might run down the battery.",
      ],
      "props": Object {
        "key": "md_59",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "key": "md_60",
        "level": 3,
        "text": "Mask the odor until it eventually dissipates naturally – sometimes it just takes time",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Materials Needed",
          ],
          "props": Object {
            "key": "md_61",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_62",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Essential oil diffuser",
          ],
          "props": Object {
            "key": "md_63",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Odor-absorbing substance",
          ],
          "props": Object {
            "key": "md_64",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Upholstery odor remover",
          ],
          "props": Object {
            "key": "md_65",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_66",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 1: Spray the upholstery, headliner, and carpet with a spray odor neutralizer",
          ],
          "props": Object {
            "key": "md_67",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_68",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 2: Use an essential oil diffuser in your car",
          ],
          "props": Object {
            "key": "md_69",
          },
          "tag": "strong",
        },
        ". You can choose your favorite essential oil fragrance or use a different essential oil each day. ",
        Object {
          "children": Array [
            "Amazon",
          ],
          "props": Object {
            "href": "https://www.amazon.com/s/ref=nb_sb_ss_i_1_30?url=search-alias%3Dautomotive&field-keywords=essential+oil+diffuser+for+car&sprefix=essential+oil+diffuser+for+car%2Cautomotive%2C208&crid=P9R2ST8MI037",
            "key": "md_70",
            "title": null,
          },
          "tag": "a",
        },
        " has a nice selection of diffusers to choose from and sells essential oils.",
      ],
      "props": Object {
        "key": "md_71",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 3: Place an odor-absorbing substance near the source of the odor",
          ],
          "props": Object {
            "key": "md_72",
          },
          "tag": "strong",
        },
        ". You can pick them up at the local discount store or order them online. ",
        Object {
          "children": Array [
            "MosoNatural",
          ],
          "props": Object {
            "href": "http://mosonatural.com/",
            "key": "md_73",
            "title": null,
          },
          "tag": "a",
        },
        " sells a very effective product online.",
      ],
      "props": Object {
        "key": "md_74",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        "We all know how distracting the stink from a little spilled milk can be, so no doubt you’ll be glad you have it removed before it gets any worse. A nice-smelling car makes any trip, long or short, that much more pleasant. ",
      ],
      "props": Object {
        "key": "md_75",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`real article db-lr: How to Remove Odors From Car Interiors 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        "You don’t have to just live with the odor when there is an unidentified stink in your car. It will take a little effort, but it is well worth it to be able to get in your car without thinking, “ew, why does it smell like that in here?” All you have to do is find the source, clean it up, then give your car a good cleaning – which it probably needs anyway.",
      ],
      "props": Object {
        "key": "md_0",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "key": "md_1",
        "level": 3,
        "text": "Remove the cause of the odor",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Materials Needed",
          ],
          "props": Object {
            "key": "md_2",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_3",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Paper towels",
          ],
          "props": Object {
            "key": "md_4",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Plastic utensil or putty knife",
          ],
          "props": Object {
            "key": "md_5",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_6",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 1: Determine where the odor is coming from",
          ],
          "props": Object {
            "key": "md_7",
          },
          "tag": "strong",
        },
        ". It could be leftover residue from an old milk or juice spill, a half-eaten piece of fruit, or a sippy cup with a little curdled milk left in the bottom.",
      ],
      "props": Object {
        "key": "md_8",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 2: Remove the cause of the odor",
          ],
          "props": Object {
            "key": "md_9",
          },
          "tag": "strong",
        },
        ". Pick it up with paper towels or scrape it off with a plastic utensil or putty knife.",
      ],
      "props": Object {
        "key": "md_10",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "key": "md_11",
        "level": 3,
        "text": "Clean the odor-causing spill",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Materials Needed",
          ],
          "props": Object {
            "key": "md_12",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_13",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Baking soda",
          ],
          "props": Object {
            "key": "md_14",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Bucket",
          ],
          "props": Object {
            "key": "md_15",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Dish soap",
          ],
          "props": Object {
            "key": "md_16",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Distilled vinegar",
          ],
          "props": Object {
            "key": "md_17",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Hot water",
          ],
          "props": Object {
            "key": "md_18",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Towels",
          ],
          "props": Object {
            "key": "md_19",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Vacuum",
          ],
          "props": Object {
            "key": "md_20",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Washcloth or clean sponge",
          ],
          "props": Object {
            "key": "md_21",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_22",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 1: Combine 1 cup of vinegar, 1 teaspoon of dish soap, and 1 gallon of hot water in a bucket",
          ],
          "props": Object {
            "key": "md_23",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_24",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        "**Step 2: Put on some rubber dishwashing gloves and apply the solution to the source of the odor **.",
      ],
      "props": Object {
        "key": "md_25",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 3: Rub the solution into the spot with a scrub brush or sponge",
          ],
          "props": Object {
            "key": "md_26",
          },
          "tag": "strong",
        },
        ". Let it work for about half an hour.",
      ],
      "props": Object {
        "key": "md_27",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 4: Soak up the dirty vinegar solution with a towel",
          ],
          "props": Object {
            "key": "md_28",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_29",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 5: Pour baking soda on the stinky spot",
          ],
          "props": Object {
            "key": "md_30",
          },
          "tag": "strong",
        },
        ". Apply it as heavily as possible. A 1/4-inch thickness or more is best. Leave it there for as long as possible. Overnight is good but several days is better.",
      ],
      "props": Object {
        "key": "md_31",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 6: Vacuum up the baking soda",
          ],
          "props": Object {
            "key": "md_32",
          },
          "tag": "strong",
        },
        ". Use a high-powered wet/dry vacuum if possible. If you only have a regular household vacuum, empty the canister or replace the bag before you use it.",
      ],
      "props": Object {
        "key": "md_33",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 7: Repeat steps 5 and 6, if the odor lingers",
          ],
          "props": Object {
            "key": "md_34",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_35",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        "**Step 8: Put the windows down and leave the car outdoors, if you can, to let it air out **.",
      ],
      "props": Object {
        "key": "md_36",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "key": "md_37",
        "level": 3,
        "text": "Clean the entire interior of your car",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        "Now it’s time to give your car’s interior a ",
        Object {
          "children": Array [
            "thorough cleaning",
          ],
          "props": Object {
            "href": "https://getjerry.com/advice/how-to-do-a-thorough-car-interior-cleaning-by-amber-dowler",
            "key": "md_38",
            "title": null,
          },
          "tag": "a",
        },
        ". At this point, you can also tackle ",
        Object {
          "children": Array [
            "grease and oil stains",
          ],
          "props": Object {
            "href": "https://getjerry.com/advice/how-to-remove-grease-and-oil-from-a-car-interior-by-mary-kurz",
            "key": "md_39",
            "title": null,
          },
          "tag": "a",
        },
        ", ",
        Object {
          "children": Array [
            "windows",
          ],
          "props": Object {
            "href": "https://getjerry.com/advice/how-to-clean-the-inside-of-a-car-windshield-by-cheryl-knight",
            "key": "md_40",
            "title": null,
          },
          "tag": "a",
        },
        ", and, once you’re done, consider installing ",
        Object {
          "children": Array [
            "car seat covers",
          ],
          "props": Object {
            "href": "https://getjerry.com/advice/how-to-buy-install-and-clean-car-seat-covers-by-rochelle-miller-hernandez",
            "key": "md_41",
            "title": null,
          },
          "tag": "a",
        },
        ".",
      ],
      "props": Object {
        "key": "md_42",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Materials Needed",
          ],
          "props": Object {
            "key": "md_43",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_44",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Automotive carpet and upholstery cleaner (Available in auto parts stores and online.)",
          ],
          "props": Object {
            "key": "md_45",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Towels",
          ],
          "props": Object {
            "key": "md_46",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Washcloth or clean sponge",
          ],
          "props": Object {
            "key": "md_47",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Vacuum",
          ],
          "props": Object {
            "key": "md_48",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_49",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 1: Take everything out of the car",
          ],
          "props": Object {
            "key": "md_50",
          },
          "tag": "strong",
        },
        ". Remove the floor mats, too.",
      ],
      "props": Object {
        "key": "md_51",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 2: Vacuum the entire car, top to bottom",
          ],
          "props": Object {
            "key": "md_52",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_53",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 3: Clean the carpet, upholstery, and headliner/roof upholstery with automotive carpet and upholstery cleaner",
          ],
          "props": Object {
            "key": "md_54",
          },
          "tag": "strong",
        },
        ". Follow the manufacturer’s instructions. ",
      ],
      "props": Object {
        "key": "md_55",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        "For best results, get an all-purpose cleaning/odor-eliminating solution like ",
        Object {
          "children": Array [
            "Turtle Wax’s Clean and Fresh Kit",
          ],
          "props": Object {
            "href": "https://www.amazon.com/dp/B072HKH61F?psc=1",
            "key": "md_56",
            "title": null,
          },
          "tag": "a",
        },
        ". It even comes with a special microfiber towel to use.",
      ],
      "props": Object {
        "key": "md_57",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 4: Let the car sit outdoors with the windows open for as long as you can to really air it out",
          ],
          "props": Object {
            "key": "md_58",
          },
          "tag": "strong",
        },
        ". Do not leave the doors open, though. The dome light might run down the battery.",
      ],
      "props": Object {
        "key": "md_59",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "key": "md_60",
        "level": 3,
        "text": "Mask the odor until it eventually dissipates naturally – sometimes it just takes time",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Materials Needed",
          ],
          "props": Object {
            "key": "md_61",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_62",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Essential oil diffuser",
          ],
          "props": Object {
            "key": "md_63",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Odor-absorbing substance",
          ],
          "props": Object {
            "key": "md_64",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Upholstery odor remover",
          ],
          "props": Object {
            "key": "md_65",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_66",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 1: Spray the upholstery, headliner, and carpet with a spray odor neutralizer",
          ],
          "props": Object {
            "key": "md_67",
          },
          "tag": "strong",
        },
        ".",
      ],
      "props": Object {
        "key": "md_68",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 2: Use an essential oil diffuser in your car",
          ],
          "props": Object {
            "key": "md_69",
          },
          "tag": "strong",
        },
        ". You can choose your favorite essential oil fragrance or use a different essential oil each day. ",
        Object {
          "children": Array [
            "Amazon",
          ],
          "props": Object {
            "href": "https://www.amazon.com/s/ref=nb_sb_ss_i_1_30?url=search-alias%3Dautomotive&field-keywords=essential+oil+diffuser+for+car&sprefix=essential+oil+diffuser+for+car%2Cautomotive%2C208&crid=P9R2ST8MI037",
            "key": "md_70",
            "title": null,
          },
          "tag": "a",
        },
        " has a nice selection of diffusers to choose from and sells essential oils.",
      ],
      "props": Object {
        "key": "md_71",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Step 3: Place an odor-absorbing substance near the source of the odor",
          ],
          "props": Object {
            "key": "md_72",
          },
          "tag": "strong",
        },
        ". You can pick them up at the local discount store or order them online. ",
        Object {
          "children": Array [
            "MosoNatural",
          ],
          "props": Object {
            "href": "http://mosonatural.com/",
            "key": "md_73",
            "title": null,
          },
          "tag": "a",
        },
        " sells a very effective product online.",
      ],
      "props": Object {
        "key": "md_74",
      },
      "tag": "p",
    },
    Object {
      "children": Array [
        "We all know how distracting the stink from a little spilled milk can be, so no doubt you’ll be glad you have it removed before it gets any worse. A nice-smelling car makes any trip, long or short, that much more pleasant. ",
      ],
      "props": Object {
        "key": "md_75",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`should allow injecting context to elements 1`] = `
Object {
  "tree": Array [
    Object {
      "props": Object {
        "key": "md_0",
        "level": 1,
        "text": "foo",
      },
      "tag": "heading",
    },
  ],
}
`;

exports[`should be able to combine in compilation 1`] = `
Object {
  "tree": Array [
    Object {
      "props": Object {
        "key": "md_0",
        "level": 1,
        "text": "hey",
      },
      "tag": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            "foo",
          ],
          "props": Object {
            "key": "md_1",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_2",
      },
      "tag": "ul",
    },
    Object {
      "children": Array [
        "-bar",
      ],
      "props": Object {
        "key": "md_3",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`should be able to compile codespans 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        "install with ",
        Object {
          "children": Array [
            "$ npm install",
          ],
          "props": Object {
            "key": "md_0",
          },
          "tag": "codespan",
        },
      ],
      "props": Object {
        "key": "md_1",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`should be able to compile components using H and marksy language 1`] = `
Object {
  "tree": Array [
    Object {
      "props": Object {
        "code": "h(Test)",
        "key": "md_0",
        "language": "marksy",
      },
      "tag": "code",
    },
  ],
}
`;

exports[`should be able to compile headers 1`] = `
Object {
  "tree": Array [
    Object {
      "props": Object {
        "key": "md_0",
        "level": 1,
        "text": "header1",
      },
      "tag": "heading",
    },
    Object {
      "props": Object {
        "key": "md_1",
        "level": 2,
        "text": "header2",
      },
      "tag": "heading",
    },
    Object {
      "props": Object {
        "key": "md_2",
        "level": 3,
        "text": "header3",
      },
      "tag": "heading",
    },
    Object {
      "props": Object {
        "key": "md_3",
        "level": 4,
        "text": "header4",
      },
      "tag": "heading",
    },
  ],
}
`;

exports[`should be able to compile html 1`] = `
Object {
  "tree": Array [
    Object {
      "props": Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<div>hello</div>",
        },
        "key": "md_0",
      },
      "tag": "div",
    },
  ],
}
`;

exports[`should be able to compile image 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        Object {
          "props": Object {
            "alt": "test",
            "key": "md_0",
            "src": "http://some.com/image.png",
          },
          "tag": "img",
        },
      ],
      "props": Object {
        "key": "md_1",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`should be able to compile italic text 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        "hello ",
        Object {
          "children": Array [
            "there",
          ],
          "props": Object {
            "key": "md_0",
          },
          "tag": "em",
        },
      ],
      "props": Object {
        "key": "md_1",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`should be able to compile links 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "my link",
          ],
          "props": Object {
            "href": "http://example.com",
            "key": "md_0",
            "title": null,
          },
          "tag": "a",
        },
      ],
      "props": Object {
        "key": "md_1",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`should be able to compile list 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "foo",
          ],
          "props": Object {
            "key": "md_0",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "bar",
          ],
          "props": Object {
            "key": "md_1",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_2",
      },
      "tag": "ul",
    },
  ],
}
`;

exports[`should be able to compile multiple html 1`] = `
Object {
  "tree": Array [
    Object {
      "props": Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<div>hello</div>
<strong>there</strong>
<em>world</em>",
        },
        "key": "md_0",
      },
      "tag": "div",
    },
  ],
}
`;

exports[`should be able to compile nested lists 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Colors",
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Red",
                  ],
                  "props": Object {
                    "key": "md_0",
                  },
                  "tag": "li",
                },
                Object {
                  "children": Array [
                    "Blue",
                  ],
                  "props": Object {
                    "key": "md_1",
                  },
                  "tag": "li",
                },
              ],
              "props": Object {
                "key": "md_2",
              },
              "tag": "ul",
            },
          ],
          "props": Object {
            "key": "md_3",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "Shape",
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Triangle",
                  ],
                  "props": Object {
                    "key": "md_4",
                  },
                  "tag": "li",
                },
                Object {
                  "children": Array [
                    "Rectangle",
                  ],
                  "props": Object {
                    "key": "md_5",
                  },
                  "tag": "li",
                },
              ],
              "props": Object {
                "key": "md_6",
              },
              "tag": "ul",
            },
          ],
          "props": Object {
            "key": "md_7",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_8",
      },
      "tag": "ul",
    },
  ],
}
`;

exports[`should be able to compile ordered list 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "foo",
          ],
          "props": Object {
            "key": "md_0",
          },
          "tag": "li",
        },
        Object {
          "children": Array [
            "bar",
          ],
          "props": Object {
            "key": "md_1",
          },
          "tag": "li",
        },
      ],
      "props": Object {
        "key": "md_2",
      },
      "tag": "ol",
    },
  ],
}
`;

exports[`should be able to compile self-closing tag 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        "  ",
        Object {
          "props": Object {
            "alt": "test",
            "key": "md_0",
            "src": "http://some.com/image.png",
          },
          "tag": "img",
        },
      ],
      "props": Object {
        "key": "md_1",
      },
      "tag": "p",
    },
    Object {
      "props": Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "  <div><br /></div>

",
        },
        "key": "md_2",
      },
      "tag": "div",
    },
    Object {
      "props": Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "  <hr/>

",
        },
        "key": "md_3",
      },
      "tag": "div",
    },
    Object {
      "props": Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "  <input type='text' />
",
        },
        "key": "md_4",
      },
      "tag": "div",
    },
  ],
}
`;

exports[`should be able to compile strong text 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        "hello ",
        Object {
          "children": Array [
            "there",
          ],
          "props": Object {
            "key": "md_0",
          },
          "tag": "strong",
        },
      ],
      "props": Object {
        "key": "md_1",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`should be able to compile tables 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      "Tables",
                    ],
                    "props": Object {
                      "className": undefined,
                      "key": "md_0",
                    },
                    "tag": "th",
                  },
                  Object {
                    "children": Array [
                      "Are",
                    ],
                    "props": Object {
                      "className": "text-center",
                      "key": "md_1",
                    },
                    "tag": "th",
                  },
                  Object {
                    "children": Array [
                      "Cool",
                    ],
                    "props": Object {
                      "className": "text-right",
                      "key": "md_2",
                    },
                    "tag": "th",
                  },
                ],
                "props": Object {
                  "key": "md_3",
                },
                "tag": "tr",
              },
            ],
            "props": Object {
              "key": "md_16",
            },
            "tag": "thead",
          },
        ],
        Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      "col 3 is",
                    ],
                    "props": Object {
                      "className": undefined,
                      "key": "md_4",
                    },
                    "tag": "td",
                  },
                  Object {
                    "children": Array [
                      "right-aligned",
                    ],
                    "props": Object {
                      "className": "text-center",
                      "key": "md_5",
                    },
                    "tag": "td",
                  },
                  Object {
                    "children": Array [
                      "$1600",
                    ],
                    "props": Object {
                      "className": "text-right",
                      "key": "md_6",
                    },
                    "tag": "td",
                  },
                ],
                "props": Object {
                  "key": "md_7",
                },
                "tag": "tr",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      "col 2 is",
                    ],
                    "props": Object {
                      "className": undefined,
                      "key": "md_8",
                    },
                    "tag": "td",
                  },
                  Object {
                    "children": Array [
                      "centered",
                    ],
                    "props": Object {
                      "className": "text-center",
                      "key": "md_9",
                    },
                    "tag": "td",
                  },
                  Object {
                    "children": Array [
                      "$12",
                    ],
                    "props": Object {
                      "className": "text-right",
                      "key": "md_10",
                    },
                    "tag": "td",
                  },
                ],
                "props": Object {
                  "key": "md_11",
                },
                "tag": "tr",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      "zebra stripes",
                    ],
                    "props": Object {
                      "className": undefined,
                      "key": "md_12",
                    },
                    "tag": "td",
                  },
                  Object {
                    "children": Array [
                      "are neat",
                    ],
                    "props": Object {
                      "className": "text-center",
                      "key": "md_13",
                    },
                    "tag": "td",
                  },
                  Object {
                    "children": Array [
                      "$1",
                    ],
                    "props": Object {
                      "className": "text-right",
                      "key": "md_14",
                    },
                    "tag": "td",
                  },
                ],
                "props": Object {
                  "key": "md_15",
                },
                "tag": "tr",
              },
            ],
            "props": Object {
              "key": "md_17",
            },
            "tag": "tbody",
          },
        ],
      ],
      "props": Object {
        "key": "md_18",
      },
      "tag": "table",
    },
  ],
}
`;

exports[`should be able to compile text 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        "hello",
      ],
      "props": Object {
        "key": "md_0",
      },
      "tag": "p",
    },
  ],
}
`;

exports[`should be able to handle title formats 1`] = `
Object {
  "tree": Array [
    Object {
      "children": Array [
        "hey",
      ],
      "props": Object {
        "key": "md_0",
      },
      "tag": "strong",
    },
    Object {
      "props": Object {
        "key": "md_1",
        "level": 1,
        "text": "{{0}}",
      },
      "tag": "heading",
    },
  ],
}
`;

exports[`should handle same name nested headers 1`] = `
Object {
  "tree": Array [
    Object {
      "props": Object {
        "key": "md_0",
        "level": 1,
        "text": "header1",
      },
      "tag": "heading",
    },
    Object {
      "props": Object {
        "key": "md_1",
        "level": 2,
        "text": "header2",
      },
      "tag": "heading",
    },
    Object {
      "props": Object {
        "key": "md_2",
        "level": 1,
        "text": "header3",
      },
      "tag": "heading",
    },
    Object {
      "props": Object {
        "key": "md_3",
        "level": 2,
        "text": "header2",
      },
      "tag": "heading",
    },
  ],
}
`;

exports[`should produce TOC 1`] = `undefined`;
